# src/modules/mira/infra/https/routes/mira.routes.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { createMiraFactory } from '../controllers';
+
+const miraRoutes = Router();
+
+miraRoutes.post('/', (req, res) => createMiraFactory.handle(req, res));
+
+export { miraRoutes };
